app/static/css/main.css
@import url('https://fonts.googleapis.com/css?family=Kaushan+Script|Merienda|Fredericka+the+Great|Charm:700|Stardos+Stencil');

html {
  position: relative;
  min-height: 100%;
}

body {
  /* Margin bottom by footer height */
  margin-bottom: 60px;
  /* background-image: url('../img/bg.jpg') !important; */
  background: white;
}
#datepicker{
	display:inline-block;
	margin:0 auto;
}
.center {
	text-align: -webkit-center;
}
.nav-link{
	font-size: 15px;
	margin: 5px;
	color:white;
}

.table-responsive>.fixed-column {
  position: fixed;
}

.contain {
  display: table;
  width: 100%;
}

.left-half, .right-half {
  display: table-cell;
  width: 48%;
  margin: 20px;
  padding:20px;
}

.title{
	font-family: Merienda;
	text-align: center;
	color: white;
	top: 50%;
}

.round{	
	background-color: #3f56bb;	
	color: white;
	margin: 10px;	
	padding: 30px;	
	border-radius: 25px;
	text-align: center;	
}	

.footer {
  position: fixed;
  bottom: 0;
  width: 100%;
  height: 80px; /* Set the fixed height of the footer here */
  line-height: 60px; /* Vertically center the text there */
  background: #e48f11;
  color: white;
}

body > .container {
  padding: 20px;
  margin-bottom: 80px;
}

.footer > .container {
  padding-right: 15px;
  padding-left: 15px;
}

code {
  font-size: 80%;
}

/* Horizontal table scroll with fixed first column */
.table-scroll {
	position:relative;
	margin:auto;
	overflow:hidden;
	border:1px solid #000;
}
.table-wrap {
	width:100%;
	overflow:auto;
}

.table-scroll table {
	width:100%;
	margin:auto;
	border-collapse:separate;
	border-spacing:0;	
}
.table-scroll th, .table-scroll td {
	padding:5px 10px;
	border:1px solid #000;
	color:black;
	background:rgb(255, 255, 255);
	white-space:nowrap;
	vertical-align:top;
}
.table-scroll thead, .table-scroll tfoot {
	background:#f9f9f9;
}
.clone {
	position:absolute;
	top:0;
	left:0;
	pointer-events:none;
}
.clone th, .clone td {
	visibility:hidden
}
.clone td, .clone th {
	border-color:transparent
}
.clone tbody th {
	visibility:visible;
	color:red;
}
.clone .fixed-side {
	border:1px solid #000;
	background:#eee;
	visibility:visible;
}
.clone thead, .clone tfoot{background:transparent;}

ul {
	list-style:none; 
	padding-left:0
}

@media only screen and (max-width: 750px) {
	.contain {
	  display: block;
	  width: 100%;
	  padding: 10px;
	}
}

